# planote

./: .gitignore  ARCHITECTURE.md  AUTHORS  CHANGELOG.md  README.md  RELEASE_NOTES.md  io.github.dev_aatif.planote.json  meson.build  planote.doap
.github/workflows/: apply-translations.yml  ci.yml  flatpak.yml  release.yml  test.yml
.gnome-builder/flatpak/etc/installations.d/: gnome-builder.conf
.gnome-builder/flatpak/repo/: config  gnome-nightly.filter
.gnome-builder/flatpak/repo/tmp/cache/summaries/: flathub.idx
.gnome-builder/manuals/: manuals.sqlite  manuals.sqlite-shm  manuals.sqlite-wal
.gnome-builder/projects/planote/: session.gvariant
build-aux/: io.github.dev_aatif.planote.Devel.json  no-webkit.json
core/: Constants.vala  Enum.vala  QuickAddCore.vala  meson.build
core/Objects/: BaseObject.vala  Item.vala  Label.vala  Note.vala  Notebook.vala  Project.vala  Section.vala  Source.vala
core/Objects/Filters/: AllItems.vala  AllNotes.vala  Inbox.vala  Notes.vala  NotesArchived.vala  NotesInbox.vala  NotesLabels.vala  NotesPinboard.vala  NotesToday.vala  Today.vala
core/Services/: AutoSave.vala  Database.vala  Database.vala.bak  EventBus.vala  Settings.vala  Store.vala  Store.vala.bak  Todoist.vala  UndoManager.vala
core/Services/CalDAV/: CalDAVClient.vala
core/Services/Chrono/: RecurrenceRule.vala
core/Services/Chrono/Common/: ISOParser.vala  SlashParser.vala  TimeParser.vala
core/Services/Chrono/Locales/en/: ENDateTimeComboParser.vala
core/Utils/: Datetime.vala  MarkdownProcessor.vala  Util.vala  Validation.vala
core/Widgets/: IconColorProject.vala  ItemLabelChild.vala  MarkdownEditor.vala
core/Widgets/LabelPicker/: LabelQuickPicker.vala
core/Widgets/ProjectPicker/: ProjectPickerCore.vala  ProjectPickerRow.vala
core/Widgets/ReminderPicker/: ReminderPicker.vala
data/: gschemas.compiled  io.github.dev_aatif.planote.appdata.xml.in.in  io.github.dev_aatif.planote.desktop.in.in  io.github.dev_aatif.planote.gresource.xml  io.github.dev_aatif.planote.gschema.xml.in  meson.build
data/resources/stylesheet/: animations.css  sidebar.css  stylesheet.css
data/resources/ui/: shortcuts.ui
docs/: deployment.md  development.md  testing.md  user_guide.md
po/: af.po  ak.po  ar.po  az.po  be.po  bg.po  bn.po  bs.po  ca.po  ckb.po  cs.po  cv.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  io.github.dev_aatif.planote.pot  is.po  it.po  ja.po  jv.po  ka.po  kab.po  kk.po  kn.po  (+45 more)
po/extra/: POTFILES  af.po  ak.po  ar.po  az.po  be.po  bg.po  bn.po  bs.po  ca.po  ckb.po  cs.po  cv.po  da.po  de.po  el.po  eo.po  es.po  et.po  eu.po  extra.pot  fa.po  fi.po  fr.po  ga.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it.po  ja.po  jv.po  ka.po  kab.po  kk.po  kn.po  (+45 more)
quick-add/: App.vala  MainWindow.vala  meson.build
quick-add/Services/: DBusClient.vala
scripts/: pre-commit  update_translations.py
search-provider/: main.vala  meson.build  search-provider.vala
snap/: snapcraft.yaml
src/: App.vala  MainWindow.vala  meson.build
src/Dialogs/: CompletedTasks.vala  DatePicker.vala  ItemChangeHistory.vala  Label.vala  LabelPicker.vala  ManageArchive.vala  ManageProjects.vala  ManageSectionOrder.vala  NoteEditorDialog.vala  NotebookDialog.vala  Project.vala  ProjectPicker.vala  QuickAdd.vala  Section.vala
src/Dialogs/Preferences/: PreferencesWindow.vala
src/Dialogs/Preferences/Pages/: Appearance.vala  Backup.vala  BasePage.vala  Donate.vala  General.vala  NotesAppearance.vala  PrivacyPolicy.vala  QuickAdd.vala  Sidebar.vala  TaskSetting.vala
src/Dialogs/Preferences/Pages/Accounts/: Accounts.vala  InboxPage.vala  SourceView.vala
src/Dialogs/QuickFind/: QuickFind.vala  QuickFindFactory.vala  QuickFindSectionSorter.vala
src/Layouts/: FilterPaneChild.vala  FilterPaneRow.vala  HeaderBar.vala  ItemBoard.vala  ItemRow.vala  ItemSidebarView.vala  LabelRow.vala  NotebookRow.vala  ProjectRow.vala  SectionBoard.vala  SectionRow.vala  Sidebar.vala  SidebarSourceRow.vala
src/Objects/: Backup.vala
src/Services/: ActionManager.vala  Api.vala  Backups.vala  DBusServer.vala  Notification.vala
src/Views/: Filter.vala  Today.vala
src/Views/Label/: Label.vala  LabelSourceRow.vala  Labels.vala
src/Views/Notes/: Notes.vala
src/Views/Project/: Board.vala  List.vala  Project.vala
src/Views/Scheduled/: Scheduled.vala  ScheduledDay.vala  ScheduledMonth.vala  ScheduledOverdue.vala  ScheduledRange.vala
src/Widgets/: Attachments.vala  BypassResolveSwitchRow.vala  ColorPickerRow.vala  ComboWrapRow.vala  CompletedTaskRow.vala  EditableTextView.vala  EventRow.vala  EventsList.vala  IgnoreSSLSwitchRow.vala  ItemDetailCompleted.vala  MultiSelectToolbar.vala  NewVersionPopup.vala  NoteRow.vala  ProjectItemRow.vala  ReorderChild.vala  SectionItemRow.vala  SubItems.vala  TranslationRow.vala
test/: audit_suite.vala  meson.build  test-adversarial-v2.vala  test-adversarial.vala  test-backup.vala  test-chrono.vala  test-database.vala  test-store.vala  test-undo-manager.vala  test-validation.vala  verify_fixes.vala
